modespec, slowrx UI: Add Wraase SC-2 60
This is reverse-engineered from QSSTV by first implementing an encoder
for it that QSSTV's W260 decoder agreed with… *then* using the
specifications determined to implement the decoder in `slowrx`.

Aside from an occasional horizontal offset (which seems to be a common
issue with all modes… might be related to "where" in the 1024-sample FFT
frame the SSTV image is first seen), it seems to agree with QSSTV's
decoding of the same reference audio sample.

--- a/slowrx.ui
+++ b/slowrx.ui
@@ -638,6 +638,7 @@
                                               <item translatable="yes">Pasokon P3</item>
                                               <item translatable="yes">Pasokon P5</item>
                                               <item translatable="yes">Pasokon P7</item>
+                                              <item translatable="yes">Wraase SC-2 60</item>
                                               <item translatable="yes">Wraase SC-2 120</item>
                                               <item translatable="yes">Wraase SC-2 180</item>
                                             </items>
